# xre-legged-dog

./: README.md
install/: local_setup.sh  setup.sh
install/chienpanze_bringup/share/chienpanze_bringup/: chienpanze.launch.py  chienpanze_bringup_launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  package.zsh  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
install/chienpanze_bringup/share/chienpanze_bringup/cmake/: chienpanze_bringupConfig-version.cmake  chienpanze_bringupConfig.cmake
install/chienpanze_bringup/share/chienpanze_bringup/config/: chienpanze_controllers.yaml  test_goal_publishers_config.yaml
install/chienpanze_bringup/share/chienpanze_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/chienpanze_controller_interface/include/chienpanze_controller_interface/: chienpanze_controller_interface.hpp
install/chienpanze_controller_interface/share/chienpanze_controller_interface/: chienpanze_controllers.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
install/chienpanze_controller_interface/share/chienpanze_controller_interface/cmake/: chienpanze_controller_interfaceConfig-version.cmake  chienpanze_controller_interfaceConfig.cmake
install/chienpanze_controller_interface/share/chienpanze_controller_interface/environment/: ament_prefix_path.dsv  path.dsv
install/chienpanze_controller_manager/share/chienpanze_controller_manager/: local_setup.sh  package.dsv  package.sh  package.zsh
install/chienpanze_controllers/share/chienpanze_controllers/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/chienpanze_controllers/share/chienpanze_controllers/cmake/: chienpanze_controllersConfig.cmake
install/chienpanze_description/share/chienpanze_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/chienpanze_description/share/chienpanze_description/cmake/: chienpanze_descriptionConfig-version.cmake  chienpanze_descriptionConfig.cmake
install/chienpanze_description/share/chienpanze_description/environment/: ament_prefix_path.dsv  path.dsv
install/chienpanze_description/share/chienpanze_description/launch/: view_chienpanze.launch.py
install/chienpanze_description/share/chienpanze_description/rviz/: chienpanze.rviz
install/chienpanze_description/share/chienpanze_description/urdf/: chienpanze.urdf.xacro
install/chienpanze_hw_interface/include/chienpanze_hw_interface/: chienpanze_hw_interface.hpp
install/chienpanze_hw_interface/include/pi3hat/: pi3hat.cc  pi3hat.h
install/chienpanze_hw_interface/share/chienpanze_hw_interface/: chienpanze_hw_interface.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  package.zsh
install/chienpanze_hw_interface/share/chienpanze_hw_interface/cmake/: chienpanze_hw_interfaceConfig-version.cmake  chienpanze_hw_interfaceConfig.cmake
install/chienpanze_hw_interface/share/chienpanze_hw_interface/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
xre_chienpanze/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
xre_chienpanze/install/chienpanze_bringup/lib/chienpanze_bringup/: position_publisher
xre_chienpanze/install/chienpanze_bringup/share/chienpanze_bringup/: chienpanze.launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  test_joint_trajectory_controller.launch.py
xre_chienpanze/install/chienpanze_controller_interface/include/chienpanze_controller_interface/: chienpanze_controller_interface.hpp
xre_chienpanze/install/chienpanze_controller_interface/share/chienpanze_controller_interface/: chienpanze_controller_plugin.xml  local_setup.sh  package.bash  package.dsv  package.sh
xre_chienpanze/install/chienpanze_controller_manager/share/chienpanze_controller_manager/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
xre_chienpanze/install/chienpanze_controllers/share/chienpanze_controllers/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
xre_chienpanze/install/chienpanze_description/share/chienpanze_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  view_chienpanze.launch.py
xre_chienpanze/install/chienpanze_hw_interface/include/chienpanze_hw_interface/: chienpanze_hw_interface.hpp
xre_chienpanze/install/chienpanze_hw_interface/share/chienpanze_hw_interface/: chienpanze_hw_interface.xml  (+9 more)
xre_chienpanze/log/: latest_build
xre_chienpanze/src/chienpanze_bringup/: CMakeLists.txt
xre_chienpanze/src/chienpanze_bringup/config/: chienpanze_controllers.yaml
xre_chienpanze/src/chienpanze_bringup/launch/: chienpanze.launch.py  chienpanze_bringup_launch.py
xre_chienpanze/src/chienpanze_bringup/src/: chienpanze_pos_cmd_pub.cpp
xre_chienpanze/src/chienpanze_controller_manager/: CMakeLists.txt  package.xml
xre_chienpanze/src/chienpanze_controller_manager/src/: chienpanze_controller_manager.cpp
xre_chienpanze/src/chienpanze_controllers/: CMakeLists.txt
xre_chienpanze/src/chienpanze_controllers/include/chienpanze_controller_interface/: chienpanze_controller_interface.hpp
xre_chienpanze/src/chienpanze_controllers/src/: chienpanze_controller_interface.cpp
xre_chienpanze/src/chienpanze_description/: CMakeLists.txt  package.xml
xre_chienpanze/src/chienpanze_description/launch/: view_chienpanze.launch.py
xre_chienpanze/src/chienpanze_description/rviz/: chienpanze.rviz
xre_chienpanze/src/chienpanze_description/urdf/: chienpanze.urdf.xacro
xre_chienpanze/src/chienpanze_hw_interface/: CMakeLists.txt  chienpanze_hw_interface.xml
xre_chienpanze/src/chienpanze_hw_interface/src/: chienpanze_hw_interface.cpp
xre_chienpanze/src/chienpanze_hw_interface/test/: test_chienpanze_hw_interface.cpp
(+44 files in other folders)
